# pysz

./: README.md  pyproject.toml
src/pysz/: api.py  utils.py
tests/: test_api.py
