[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "pysz"
version = "0.0.1"
authors = [
    {name = "Jinyang Zhang", email = "zhangjinyang@biols.ac.cn"},
]
description = "Package for reading and writing svb-zstd compressed data"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "==3.10"
keywords = ["svb", "zstd"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy==1.24.2",
    "pandas==1.5.3",
    "zstandard==0.19.0",
    "pystreamvbyte @ git+https://github.com/Kevinzjy/pystreamvbyte@50eaf184b734fd7d64d18fd9b0847fb210e05b75#egg=pystreamvbyte",
]
